Added support for simple asm-statements.

--- a/pycparser/_c_ast.cfg
+++ b/pycparser/_c_ast.cfg
@@ -21,6 +21,8 @@ ArrayDecl: [type*, dim*, dim_quals]
 
 ArrayRef: [name*, subscript*]
 
+Asm: [quals, string*]
+
 # op: =, +=, /= etc.
 #
 Assignment: [op, lvalue*, rvalue*]
